Fixed link in login form

--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
                     </div>
                     <br>
                     <div>
-                        <p>Not a member? <a href="Register.html">Register here</a></p>
+                        <p>Not a member? <a href="/public/Signup.html">Register here</a></p>
                     </div>
 
                 </form>
