--- a/public/Signup.html
+++ b/public/Signup.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -38,28 +37,28 @@
             <div class="col" id="col2">
 
                 <h1>Register Here</h1>
-                <form action="backend.php">
+                <form action="/Signup" method="post">
                     <label for="name" id="form">First name</label>
                     <br>
                     <div>
-                        <input type="name" name="myname" id="ph" placeholder="Enter your first name">
+                        <input type="name" name="fname" id="ph" placeholder="Enter your first name">
                     </div>
                     <br>
                     <label for="name" id="form">Last name</label>
                     <br>
                     <div>
-                        <input type="name" name="myname" id="ph" placeholder="Enter your last name">
+                        <input type="name" name="lname" id="ph" placeholder="Enter your last name">
                     </div>
                     <br>
                     <label for="email" id="form">Email</label>
                     <br>
                     <div>
-                        <input type="email" name="myEmail" id="ph" placeholder="Enter your email">
+                        <input type="email" name="email" id="ph" placeholder="Enter your email">
                     </div>
                     <br>
                     <label for="pass" id="form">Password</label>
                     <div>
-                        <input type="password" name="mypassword" id="ph" placeholder="Enter you password">
+                        <input type="password" name="pass" id="ph" placeholder="Enter you password">
                     </div>
                     <br>
                     <div>
