--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -26,6 +25,12 @@
         width: 80%;
     }
     
+    #col1 {
+        padding: 34px;
+        margin-top: 90px;
+        margin-left: 0px;
+    }
+    
     #col2 {
         padding: 34px;
         margin-top: 90px;
@@ -36,28 +41,33 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col" id="col1">
+                <h2>About Us</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere corrupti voluptate, consequatur a perferendis qui distinctio ea illum vel adipisci quae numquam iste voluptas ducimus quidem provident nihil nesciunt omnis.
+                </p>
+            </div>
             <div class="col" id="col2">
 
                 <h1>Welcome Back!</h1>
-                <form action="backend.php">
-                    <label for="email" id="form">Email</label>
-                    <br>
-                    <div>
-                        <input name="email" type="email" name="myEmail" id="ph" placeholder="Enter your email">
+
+                <form action="/" method="post">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
-                    <br>
-                    <label for="pass" id="form">Password</label>
-                    <div>
-                        <input name="pass" type="password" name="mypassword" id="ph" placeholder="Enter you password">
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" name="pass" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <br>
-                    <div>
-                        <button type="button" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Remember me</label>
                     </div>
-                    <br>
+                    <button type="submit" class="btn btn-primary">Submit</button><br>
                     <div>
-                        <p>Not a member? <a href="Register.html">Register here</a></p>
+                        <p>Not a member? <a href="/public/Signup.html">Register here</a></p>
                     </div>
 
                 </form>
