Fixed link in login form

--- a/public/Signup.html
+++ b/public/Signup.html
@@ -39,7 +39,7 @@
 
                 <h1>Register Here</h1>
 
-                <form action="Signup.html" method="post">
+                <form action="/Signup.html" method="post">
                     <label for="name" id="form">First name</label>
                     <br>
                     <div>
