added shadows to navbar

--- a/public/html/groupList.html
+++ b/public/html/groupList.html
@@ -27,7 +27,7 @@
                             <div class="dropdown-content">
                                 <a id="list-item" href="#">Profile</a>
                                 <a id="list-item" href="#">Settings</a>
-                                <a id="list-item" href="#">Log out</a>
+                                <a id="list-item" href="../../login.html">Log out</a>
                             </div>
                         </a>
                     </li>
