--- a/public/html/addGroup.html
+++ b/public/html/addGroup.html
@@ -22,16 +22,16 @@
             <nav class="navbar" style="padding: 0rem 1.5rem;">
                 <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
                 <ul>
-                    <li><a href="#">Group List</a></li>
+                    <li><a href="groupList.html">Group List</a></li>
                     <li><a href="#">Notifications</a></li>
                     <li class="dropdown">
                         <a href="#">
                             <button class="dropbtn">Profile <i class="bi bi-person-circle"></i>
                     </button>
                             <div class="dropdown-content">
-                                <a id="list-item" href="#">Profile</a>
-                                <a id="list-item" href="#">Settings</a>
-                                <a id="list-item" href="#">Log out</a>
+                                <a id="list-item" href="Profile.html">Profile</a>
+                                <a id="list-item" href="settings.html">Settings</a>
+                                <a id="list-item" href="../../login.html">Log out</a>
                             </div>
                         </a>
 
