--- a/public/html/groupList.html
+++ b/public/html/groupList.html
@@ -35,47 +35,43 @@
             </nav>
     </header>
     <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Shareefo ki Basti</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div>
-    <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Family</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div><br>
-    <div class=" card w-50 h-25">
-        <div class="card-body ">
-            <h5 class="card-title ">Homies</h5>
-            <a href="# " class="btn btn-primary " style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div>
-    <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Mad House</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div>
-    <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Iconic Bonds</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div>
+    <div class="input-group">
+        <input type="search" class="group-input" name="add-group-input" class="form-control rounded" placeholder="Add a group" aria-label="Add" aria-describedby="search-addon" />
+        <button type="submit" class="add-group-btn btn btn-outline-primary">Add</button>
+      </div>
+    <ul class="Group-List">
+        <li class="group">
+            <div class="card w-50 h-25">
+                <div class="card-body">
+                    <h5 class="card-title">Shareefo ki Basti</h5>
+                    <a href="#" class="btn btn-primary" id="details-btn">Details</a>
+                </div>
+            </div>
+        </li>
+    </ul>
+    
     <div class="fab-container">
         <div class="button iconbutton">
             <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
         </div>
     </div>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <script src="../scripts/GroupList.js"></script>
 </body>
 
 </html>
