--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
             </div>
             <div class="col" id="col2">
 
-                <h1>Welcome Back!</h1>
+                <h1>Welcome Back!</h1><br>
 
                 <form action="/" method="post">
 
@@ -70,9 +70,9 @@
                     </div>
                     <br>
                     <div>
-                        <p>Not a member? <a href="/public/Signup.html">Register here</a></p>
+                        <p>Not a member? <a href="Signup.html">Register here</a></p>
 
-                    
+
 
                     </div>
 
