--- a/public/Signup.html
+++ b/public/Signup.html
@@ -36,7 +36,7 @@
             <div class="col"></div>
             <div class="col" id="col2">
 
-                <h1>Create Account!</h1>
+                <h1>Create Account!</h1><br>
 
                 <form action="/Signup.html" method="post">
                     <label for="name" id="form">First name</label>
