--- a/public/html/groupList.html
+++ b/public/html/groupList.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <div class="bg-div">
+        <!-- <div class="bg-div">
             <nav class="navbar" style="padding: 0rem 1.5rem;">
                 <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
                 <ul>
@@ -32,50 +32,61 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
+        <nav class="navbar navbar-expand-lg">
+            <button class="navbar-toggler" style="background-color: white; color: rgb(0, 136, 167);" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
+                <ul class="navbar-nav ">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#" style="padding-right: 60px;padding-top: 10px;padding-left: 55rem;">Group List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" style="padding-top: 10px;">Notifications</a>
+                    </li>
+                    <li class="dropdown nav-link">
+                        <a href="#">
+                            <button class="dropbtn">User <i class="bi bi-person-circle"></i>
+                    </button>
+                            <div class="dropdown-content">
+                                <a id="list-item" href="Profile.html">Profile</a>
+                                <a id="list-item" href="settings.html">Settings</a>
+                                <a id="list-item" href="../../login.html">Log out</a>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Shareefo ki Basti</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
+    <div style="position:relative; left:35%; top:2px;">
+        <form>
+            <input type="text" id="nameofgroup" name="groupname" placeholder="Enter Group Name"><br><br>
+            <div style="position:relative; left:10%; top:2px">
+                <button type="button" class="btn btn-info">Create Group</button><br>
+            </div>
     </div>
+
     <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Family</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div><br>
-    <div class=" card w-50 h-25">
+    <div class="card w-50 h-25" style="margin-top: 1.5rem;">
         <div class="card-body ">
-            <h5 class="card-title ">Homies</h5>
-            <a href="# " class="btn btn-primary " style="background-color: rgb(0, 136, 167);">Details</a>
+            <h5 class="card-title " id="group-name ">Shareefo ki Basti</h5>
+            <a href="# " class="btn btn-primary " style="background-color: rgb(0, 136, 167); ">Details</a>
         </div>
     </div>
-    <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Mad House</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
+
+    </div>
+    <div class="fab-container ">
+        <div class="button iconbutton ">
+            <a href="../html/addGroup.html "><i class="bi bi-plus " style="font-size:3rem "></i></a>
         </div>
     </div>
-    <br>
-    <div class="card w-50 h-25">
-        <div class="card-body">
-            <h5 class="card-title">Iconic Bonds</h5>
-            <a href="#" class="btn btn-primary" style="background-color: rgb(0, 136, 167);">Details</a>
-        </div>
-    </div>
-    <div class="fab-container">
-        <div class="button iconbutton">
-            <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
-        </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
 
 </html>
