--- a/public/html/addExpense.html
+++ b/public/html/addExpense.html
@@ -9,66 +9,83 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
-    <link rel="stylesheet" href="addExpense.css">
+    <link rel="stylesheet" href="../css/addExpense.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <div class="bg-div">
-            <nav class="navbar" style="padding: 0rem 1.5rem;">
-                <div id="logo"><img class="logo" src="logo.png" alt="splitter" ALIGN=CENTER></div>
-                <ul>
-                    <li><a href="#">Group List</a></li>
-                    <li><a href="#">Notifications</a></li>
-                    <li class="dropdown">
-                        <a href="#">
-                            <button class="dropbtn">User <i class="bi bi-person-circle"></i>
-                    </button>
-                            <div class="dropdown-content">
-                                <a id="list-item" href="#">Profile</a>
-                                <a id="list-item" href="#">Settings</a>
-                                <a id="list-item" href="../../login.html">Log out</a>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-    </header>
+    <nav class="navbar navbar-expand-custom navbar-mainbg">
+        <img class="navbar-brand navbar-logo" src="../images/logo.png" width="120" height="100">
+
+        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; height: 2.5rem;">
+    <i class="fas fa-bars text-white"></i>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <div class="hori-selector">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../html/Profile.html"><i class="bi bi-person-circle"></i> Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-gear"></i> Settings</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#"><img src="https://cdn-icons-png.flaticon.com/128/3329/3329438.png" width="20" height="20"> Log out</a>
+                </li> -->
+            </ul>
+        </div>
+    </nav>
     <br><br>
-    <h1>Shareefo ki Basti</h1>
+    <h1 style="padding-left: 700px;">Project Group</h1>
     <br>
     <h2>Add Expense</h2>
     <br>
-    <div id="addExpense"><img class="addExpense" src="addExpense.png" alt="splitter" ALIGN=left>
-    <br>
-    <div>
-      <input class="date" type = "date">
-      <input class="totalbill" type="text" placeholder="Total Bill Amount" Required>
-    </div>
-    <br>
-    <div>
-      <input class="billname" type="text" placeholder="Bill Name" Required>
-    </div>
-    <br>
-    <div>
-      <input class="people" type="text" placeholder="Enter number of peoples" Required>
-    </div>
-    <br>
-    <div>
-      <input class="split" type="text" placeholder="Enter Split Percentage" Required>
-    </div>
-    <br>
-    <div>
-      <button class="button" type="button" class="btn btn-info">SAVE</button>
-    </div>
+    <div id="addExpense"><img class="addExpense" src="../images/addExpense.png" alt="splitter" ALIGN=left>
+        <br>
+        <div>
+            <input class="date" type="date">
+            <input class="totalbill" type="text" placeholder="Total Bill Amount" Required>
+        </div>
+        <br>
+        <div>
+            <input class="billname" type="text" placeholder="Bill Name" Required>
+        </div>
+        <br>
+        <div>
+            <input class="people" type="text" placeholder="Enter number of people" Required>
+        </div>
+        <br>
+        <div>
+            <input class="split" type="text" placeholder="Enter Split Percentage" Required>
+        </div>
+        <br>
+        <div>
+            <button class="button" type="button" class="btn btn-info">SAVE</button>
+        </div>
     </div>
 
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/navbar.js"></script>
+
+
+
 </body>
 
 </html>
