--- a/public/html/addGroup.html
+++ b/public/html/addGroup.html
@@ -16,30 +16,37 @@
 </head>
 
 <body>
-    <header>
-        <div class="bg-div">
+    <nav class="navbar navbar-expand-custom navbar-mainbg">
+        <img class="navbar-brand navbar-logo" src="../images/logo.png" width="120" height="100">
 
-            <nav class="navbar" style="padding: 0rem 1.5rem;">
-                <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
-                <ul>
-                    <li><a href="groupList.html">Group List</a></li>
-                    <li><a href="#">Notifications</a></li>
-                    <li class="dropdown">
-                        <a href="#">
-                            <button class="dropbtn">Profile <i class="bi bi-person-circle"></i>
-                    </button>
-                            <div class="dropdown-content">
-                                <a id="list-item" href="Profile.html">Profile</a>
-                                <a id="list-item" href="settings.html">Settings</a>
-                                <a id="list-item" href="../../login.html">Log out</a>
-                            </div>
-                        </a>
+        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: white; height: 2.5rem;">
+    <i class="fas fa-bars text-white"></i>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <div class="hori-selector">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../html/Profile.html"><i class="bi bi-person-circle"></i> Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-gear"></i> Settings</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="#"><img src="https://cdn-icons-png.flaticon.com/128/3329/3329438.png" width="20" height="20"> Log out</a>
+                </li> -->
+            </ul>
+        </div>
+    </nav>
 
-                    </li>
-                </ul>
-
-            </nav>
-    </header>
     <br>
     <form class="example" action="action_page.php">
         <input type="text" placeholder="Search members.." name="search">
@@ -65,9 +72,17 @@
         </div>
     </div>
 
-    <script src=" https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/navbar.js"></script>
+
 </body>
 
 </html>
