user registration on atlas

--- a/public/html/addExpense.html
+++ b/public/html/addExpense.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
-    <link rel="stylesheet" href="addExpense.css">
+    <link rel="stylesheet" href="../css/addExpense.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
@@ -17,7 +17,7 @@
     <header>
         <div class="bg-div">
             <nav class="navbar" style="padding: 0rem 1.5rem;">
-                <div id="logo"><img class="logo" src="logo.png" alt="splitter" ALIGN=CENTER></div>
+                <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
                 <ul>
                     <li><a href="#">Group List</a></li>
                     <li><a href="#">Notifications</a></li>
@@ -26,7 +26,7 @@
                             <button class="dropbtn">User <i class="bi bi-person-circle"></i>
                     </button>
                             <div class="dropdown-content">
-                                <a id="list-item" href="#">Profile</a>
+                                <a id="list-item" href="/public/html/Profile.html">Profile</a>
                                 <a id="list-item" href="#">Settings</a>
                                 <a id="list-item" href="../../login.html">Log out</a>
                             </div>
@@ -36,11 +36,11 @@
             </nav>
     </header>
     <br><br>
-    <h1>Shareefo ki Basti</h1>
+    <h1>FY Proj</h1>
     <br>
     <h2>Add Expense</h2>
     <br>
-    <div id="addExpense"><img class="addExpense" src="addExpense.png" alt="splitter" ALIGN=left>
+    <div id="addExpense"><img class="addExpense" src="../images/addExpense.png" alt="splitter" ALIGN=left>
     <br>
     <div>
       <input class="date" type = "date">
