--- a/public/html/addGroup.html
+++ b/public/html/addGroup.html
@@ -41,7 +41,7 @@
             </nav>
     </header>
     <br>
-    <form class="example" action="action_page.php">
+    <form class="example" action="/addgroup.html" method="post">
         <input type="text" placeholder="Search members.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
     </form>
