--- a/public/html/detail.html
+++ b/public/html/detail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/groupList.css">
-    <link rel="stylesheet" href="detail.css">
+    <link rel="stylesheet" href="../css/detail.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
@@ -17,16 +17,16 @@
     <header>
         <div class="bg-div">
             <nav class="navbar" style="padding: 0rem 1.5rem;">
-                <div id="logo"><img class="logo" src="logo.png" alt="splitter" ALIGN=CENTER></div>
+                <div id="logo"><img class="logo" src="../images/logo.png" alt="splitter" ALIGN=CENTER></div>
                 <ul>
-                    <li><a href="#">Group List</a></li>
+                    <li><a href="/html/groupList.html">Group List</a></li>
                     <li><a href="#">Notifications</a></li>
                     <li class="dropdown">
                         <a href="#">
                             <button class="dropbtn">User <i class="bi bi-person-circle"></i>
                     </button>
                             <div class="dropdown-content">
-                                <a id="list-item" href="#">Profile</a>
+                                <a id="list-item" href="/public/html/Profile.html">Profile</a>
                                 <a id="list-item" href="#">Settings</a>
                                 <a id="list-item" href="../../login.html">Log out</a>
                             </div>
@@ -36,9 +36,9 @@
             </nav>
     </header>
     <br><br>
-    <h1>Shareefo ki Basti</h1>
+    <h1>Flatmates</h1>
     <br>
-    <div class="btn-group text-center">
+    <div class="btn-group text-center menu">
       <button type="button" class="btn btn-info">Settle Up</button>
       <button type="button" class="btn btn-info">Balance</button>
       <button type="button" class="btn btn-info" onclick="window.location.href = 'addExpense.html';">Add Expenses</button>
