--- a/public/html/groupList.html
+++ b/public/html/groupList.html
@@ -38,13 +38,15 @@
     <div class="input-group">
         <input type="search" class="group-input" name="add-group-input" class="form-control rounded" placeholder="Add a group" aria-label="Add" aria-describedby="search-addon" />
         <button type="submit" class="add-group-btn btn btn-outline-primary">Add</button>
+        
       </div>
     <ul class="Group-List">
         <li class="group">
             <div class="card w-50 h-25">
                 <div class="card-body">
-                    <h5 class="card-title">Shareefo ki Basti</h5>
-                    <a href="#" class="btn btn-primary" id="details-btn">Details</a>
+                    <h5 class="card-title">Flatmates</h5>
+                    <a href="../html/detail.html" class="btn btn-primary details-btn">Details</a>
+                    
                 </div>
             </div>
         </li>
@@ -55,15 +57,6 @@
             <a href="../html/addGroup.html"><i class="bi bi-plus" style="font-size:3rem"></i></a>
         </div>
     </div>
-   
-   
-   
-   
-   
-   
-   
-   
-   
    
    
    
