app.js correct code

--- a/public/html/Profile.html
+++ b/public/html/Profile.html
@@ -76,26 +76,26 @@
                     <p class="pd_style_field">Your Full name</p>
                     <a class="edit_btn" href="#"><i id = "name_edit" class="fa fa-pencil"></i></a>
                 </div>
-                <div class="pd_elements">
+                <!-- <div class="pd_elements">
                     <label class="pd_style_title" for="Username">Username</label>
                     <p class="pd_style_field">Your Username</p>
                     <a class="edit_btn" href="#"><i id = "uname_edit" class="fa fa-pencil"></i></a>
-                </div>
+                </div> -->
                 <div class="pd_elements">
                     <label class="pd_style_title" for="Email">Email address</label>
                     <p class="pd_style_field">Your Email Address</p>
                     <a class="edit_btn" href="#"><i id = "email_edit" class="fa fa-pencil"></i></a>
                 </div>
-                <div class="pd_elements">
+                <!-- <div class="pd_elements">
                     <label class="pd_style_title" for="Ph_no">Phone number</label>
                     <p class="pd_style_field">Your Phone Number</p>
                     <a class="edit_btn" href="#"><i id = "phon_edit"class="fa fa-pencil"></i></a>
-                </div>
-                <div class="pd_elements">
+                </div> -->
+                <!-- <div class="pd_elements">
                     <label class="pd_style_title" for="password">Password</label>
                     <p class="pd_style_field">Your password</p>
                     <a class="edit_btn" href="#"><i id = "pswd_edit" class="fa fa-pencil"></i></a>
-                </div>
+                </div> -->
                 <div class="pd_elements">
                     <label class="pd_style_title" for="wallet">Wallet balance</label>
                     <span id="wb_display"> 0000.00 </span>
