--- a/public/html/detail.html
+++ b/public/html/detail.html
@@ -45,51 +45,60 @@
         </div>
     </nav>
     <br><br>
-    <h1 style="padding-left: 700px;">Project Group</h1>
-    <br>
-    <div class="btn-group text-center">
-        <button type="button" class="btn btn-info">Settle Up</button>
-        <button type="button" class="btn btn-info">Balance</button>
-        <button type="button" class="btn btn-info"><a href="../html/addExpense.html" style="text-decoration: none; color:white">Add Expenses</a></button>
-    </div>
-    <br>
-    <br>
 
-    <div class="table-responsive table-hover">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>List of Expenses</th>
-                    <th>Amount</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Super Market</td>
-                    <td>5000</td>
-                </tr>
-                <tr>
-                    <td>Lunch</td>
-                    <td>600</td>
-                </tr>
-                <tr>
-                    <td>Dinner</td>
-                    <td>1200</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    <form class="example" action="/addgroup.html" method="post">
+        <input type="text" placeholder="Search members.." name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+    <div class="vl"></div>
+    <button type="button" class="btn btn-info" style="margin-top: 5px;position:relative; left:11rem; top:2px">Add</button>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+    <div style=" left:11rem; top:2px; float:right">
+        <h1 style="padding-left: 28rem;">Project Group</h1>
+        <br>
+        <div class="btn-group" style="padding-left: 5rem;">
+            <button type="button" class="btn btn-info">Settle Up</button>
+            <button type="button" class="btn btn-info">Balance</button>
+            <button type="button" class="btn btn-info"><a href="../html/addExpense.html" style="text-decoration: none; color:white">Add Expenses</a></button>
+        </div>
+        <br>
+        <br>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/navbar.js"></script>
+        <div class="table-responsive table-hover">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>List of Expenses</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Super Market</td>
+                        <td>5000</td>
+                    </tr>
+                    <tr>
+                        <td>Lunch</td>
+                        <td>600</td>
+                    </tr>
+                    <tr>
+                        <td>Dinner</td>
+                        <td>1200</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../js/navbar.js"></script>
 
 
 </body>
