--- a/public/html/Profile.html
+++ b/public/html/Profile.html
@@ -47,10 +47,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="../html/Profile.html"><i class="bi bi-person-circle"></i> Profile</a>
                 </li>
                 <li class="nav-item">
@@ -69,7 +69,7 @@
         <div id="profile_container">
             <div id="profile_picture">
                 <!-- <i class ="bi bi-person-circle"></i> -->
-                <img src="../images/user_account_avatar.png" alt="your profile picture">
+                <img src="../images/user_account_avatar.png" alt="your profile picture" class = "center">
                 <a id="edit_pic" href="#"><i class="fa fa-pencil"></i></a>
             </div>
             <div id="profile_details">
@@ -102,6 +102,7 @@
                     <label class="pd_style_title" for="wallet">Wallet balance</label>
                     <span id="wb_display"> 0000.00 </span>
                 </div>
+                <a href = "../../login.html"><button id = "logoutBtn">Logout</button></a>
             </div>
         </div>
     </section>
