--- a/public/html/addExpense.html
+++ b/public/html/addExpense.html
@@ -29,7 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../html/groupList.html"><i class="bi bi-people"></i> Group List</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#"><i class="bi bi-bell"></i> Notification</a>
                 </li>
                 <li class="nav-item">
