--- a/public/html/addGroup1.html
+++ b/public/html/addGroup1.html
@@ -60,11 +60,11 @@
                 <div id = "addBtn">
                     <button type="button" class="btn btn-info" >Add</button>
                 </div>
-                <div id = "Contd">
+               <!--<div id = "Contd">
                     <a href="../html/addGrpPh2.html"><button type="button" class="btn btn-info">Continue</button></a>
-                </div>
+                </div>-->
                 <div id = "Cancel">
-                    <a href="../html/groupList.html"><button type="button" class="btn btn-info">Cancel</button></a>
+                    <a href="../html/detail.html"><button type="button" class="btn btn-info">Cancel</button></a>
                 </div>
             </div>
         </section>
